# photo-organizer

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  similarity.py
.claude/: settings.local.json
static/: style.css
templates/: base.html  collection.html  index.html
